--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+  <!-- Owl Carousel CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+
   <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -48,18 +53,11 @@
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Services</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Residential</a></li>
-            <li><a class="dropdown-item" href="#">Commercial</a></li>
-            <li><a class="dropdown-item" href="#">Industrial</a></li>
-          </ul>
-        </li>
-        <li class="nav-item"><a class="nav-link" href="#">How it Works</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Projects</a></li>
+        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+        <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="howitwork.html">How it Works</a></li>
+        <li class="nav-item"><a class="nav-link" href="ourproject.html">Our Projects</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
       </ul>
     </div>
@@ -120,6 +118,7 @@
       </div>
 
   </div>
+
   <!-- about -->
   <section class="about-section">
     <div class="container">
@@ -155,6 +154,7 @@
       </div>
     </div>
   </section>
+
 <!-- services -->
   <div class="container py-5">
     <div class="row align-items-center">
@@ -221,6 +221,7 @@
       </div>
     </div>
   </div>
+
 <!-- Why Choose Us -->
  <div class="why"style="background:#f2f3f5;">
      <div class="container py-5" >
@@ -286,6 +287,7 @@
 
  </div>
 
+<!-- logos -->
 <section class="logos ">
   <div class="section-head text-center py-5">
     <h2 class="section-title">
@@ -370,6 +372,7 @@
     </div>
   </div>
 </section>
+<!-- project -->
 <section class="project-gallery py-5">
   <div class="container">
     <div class="text-center mb-5">
@@ -455,8 +458,7 @@
   </div>
 </section>
 
-
-
+<!-- contact -->
   <section class="contact-section">
     <!-- Left: Image -->
     <div class="contact-img">
@@ -474,66 +476,61 @@
     </div>
   </section>
 
+<!-- testimonial -->
+  <div class="container py-5">
+    <h2 class="section-title">What Our Customers Say</h2>
+<p class="section-subtitle">Real feedback from people using our product</p>
+    <div class="owl-carousel testimonial-carousel">
+      
+      <!-- Testimonial 1 -->
+      <div class="testimonial-card">
+        <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?auto=format&fit=crop&q=80&w=200&h=200" alt="Sarah K." class="testimonial-image">
+        <h3 class="testimonial-name">Sarah K.</h3>
+        <p class="testimonial-role">UX Designer @Brello</p>
+        <p class="testimonial-text">"I was looking for a way to streamline my design process"</p>
+        <div class="rating">
+          <div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div>
+        </div>
+      </div>
 
-<div class="container">
+      <!-- Testimonial 2 -->
+      <div class="testimonial-card">
+        <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?auto=format&fit=crop&q=80&w=200&h=200" alt="Michael L." class="testimonial-image">
+        <h3 class="testimonial-name">Michael L.</h3>
+        <p class="testimonial-role">Creative Director @Yo</p>
+        <p class="testimonial-text">"The Landing Page UI Kit has been a game changer. Helped us deliver faster."</p>
+        <div class="rating">
+          <div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div><div class="star empty">★</div>
+        </div>
+      </div>
 
-    <div class="testimonial-slider">
-    <button class="prev-btn">‹</button>
-    <div class="testimonial-viewport">
-      <div class="testimonial-wrapper">
-        <!-- Testimonial 1 -->
-        <div class="testimonial-card">
-          <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?auto=format&fit=crop&q=80&w=200&h=200" alt="Sarah K." class="testimonial-image">
-          <h3 class="testimonial-name">Sarah K.</h3>
-          <p class="testimonial-role">UX Designer @Brello</p>
-          <p class="testimonial-text">"I was looking for a way to streamline my design process and Anima's UI Kit was a lifesaver! Highly recommend!"</p>
-          <div class="rating">
-            <div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div>
-          </div>
+      <!-- Testimonial 3 -->
+      <div class="testimonial-card">
+        <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?auto=format&fit=crop&q=80&w=200&h=200" alt="Lauren M." class="testimonial-image">
+        <h3 class="testimonial-name">Lauren M.</h3>
+        <p class="testimonial-role">UI Designer @Boo</p>
+        <p class="testimonial-text">"This UI Kit has everything I need to quickly finish projects. It's part of my go-to tools now."</p>
+        <div class="rating">
+          <div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div>
         </div>
-  
-        <!-- Testimonial 2 -->
-        <div class="testimonial-card">
-          <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?auto=format&fit=crop&q=80&w=200&h=200" alt="Michael L." class="testimonial-image">
-          <h3 class="testimonial-name">Michael L.</h3>
-          <p class="testimonial-role">Creative Director @Yo</p>
-          <p class="testimonial-text">"The Landing Page UI Kit has been a game changer. Helped us deliver faster and more consistently."</p>
-          <div class="rating">
-            <div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div><div class="star empty">★</div>
-          </div>
+      </div>
+
+      <!-- Testimonial 4 -->
+      <div class="testimonial-card">
+        <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?auto=format&fit=crop&q=80&w=200&h=200" alt="Daniel W." class="testimonial-image">
+        <h3 class="testimonial-name">Daniel W.</h3>
+        <p class="testimonial-role">Product Manager @Nimbus</p>
+        <p class="testimonial-text">"Go-to solution for MVPs. Clean code, beautiful UI, very customizable."</p>
+        <div class="rating">
+          <div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div>
         </div>
-  
-        <!-- Testimonial 3 -->
-        <div class="testimonial-card">
-          <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?auto=format&fit=crop&q=80&w=200&h=200" alt="Lauren M." class="testimonial-image">
-          <h3 class="testimonial-name">Lauren M.</h3>
-          <p class="testimonial-role">UI Designer @Boo</p>
-          <p class="testimonial-text">"This UI Kit has everything I need to quickly finish projects. It's part of my go-to tools now."</p>
-          <div class="rating">
-            <div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div>
-          </div>
-        </div>
-  
-        <!-- Testimonial 4 -->
-        <div class="testimonial-card">
-          <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?auto=format&fit=crop&q=80&w=200&h=200" alt="Daniel W." class="testimonial-image">
-          <h3 class="testimonial-name">Daniel W.</h3>
-          <p class="testimonial-role">Product Manager @Nimbus</p>
-          <p class="testimonial-text">"Go-to solution for MVPs. Clean code, beautiful UI, very customizable."</p>
-          <div class="rating">
-            <div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div><div class="star filled">★</div>
-          </div>
-        </div>
-  
-        <!-- Add more testimonial cards here -->
       </div>
     </div>
-    <button class="next-btn">›</button>
   </div>
-</div>
 
 
 
+<!-- faq -->
           <section class="faq-one">
             <div class="container">
                 <div class="row">
@@ -621,7 +618,7 @@
       <!-- Column 1: Location -->
       <div class="col-md-3">
         <p><i class="fas fa-map-marker-alt me-2 text-warning"></i><strong>EXPERIENCE CENTRE</strong><br>Jayanagar, Bengaluru</p>
-        <p><i class="fas fa-phone-alt me-2 text-warning"></i>+91 98765 43210</p>
+        <p><i class="fas fa-phone me-2 text-warning"></i>+91 98765 43210</p>
         <p><i class="fas fa-envelope me-2 text-warning"></i>info@construction.com</p>
         <div class="social-icons mt-3">
           <a href="#" class="me-3 text-white"><i class="fab fa-linkedin"></i></a>
@@ -679,8 +676,12 @@
   <!-- JS Scripts -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+<!-- jQuery (required for Owl Carousel) -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- Owl Carousel JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+
   <script src="js/script.js"></script>
 
 
