--- a/ourproject.html
+++ b/ourproject.html
@@ -20,6 +20,10 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <!-- Preloader -->
+<div id="preloader">
+  <div class="spinner"></div>
+</div>
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg sticky-top bg-white shadow-sm">
   <div class="container d-flex align-items-center justify-content-between">
@@ -32,13 +36,14 @@
         <button class="btn dropdown-toggle" type="button" id="locationDropdown" data-bs-toggle="dropdown">
           Bangalore
         </button>
-        <ul class="dropdown-menu" aria-labelledby="locationDropdown">
-          <li><a class="dropdown-item" href="#">Chennai</a></li>
-          <li><a class="dropdown-item" href="#">Coimbatore</a></li>
-          <li><a class="dropdown-item" href="#">Madurai</a></li>
-          <li><a class="dropdown-item" href="#">Trichy</a></li>
-          <li><a class="dropdown-item" href="#">Salem</a></li>
-        </ul>
+<ul class="dropdown-menu" aria-labelledby="locationDropdown">
+  <li><a class="dropdown-item location-option" href="#" data-location="Chennai">Chennai</a></li>
+  <li><a class="dropdown-item location-option" href="#" data-location="Coimbatore">Coimbatore</a></li>
+  <li><a class="dropdown-item location-option" href="#" data-location="Madurai">Madurai</a></li>
+  <li><a class="dropdown-item location-option" href="#" data-location="Trichy">Trichy</a></li>
+  <li><a class="dropdown-item location-option" href="#" data-location="Salem">Salem</a></li>
+</ul>
+
       </div>
     </div>
 
@@ -58,6 +63,7 @@
     </div>
   </div>
 </nav>
+
 <!-- Project Banner -->
 <div class="project-banner mb-5">
   <div class="content">
@@ -153,8 +159,6 @@
 
 
 
-
-
 <!-- Footer Section -->
 <footer class="footer-section text-white py-5">
   <div class="container">
@@ -163,9 +167,9 @@
       
       <!-- Column 1: Location -->
       <div class="col-md-3">
-        <p><i class="fas fa-map-marker-alt me-2 text-warning"></i><strong>EXPERIENCE CENTRE</strong><br>Jayanagar, Bengaluru</p>
-        <p><i class="fas fa-phone me-2 text-warning"></i>+91 98765 43210</p>
-        <p><i class="fas fa-envelope me-2 text-warning"></i>info@construction.com</p>
+        <p><i class="fas fa-map-marker-alt me-2 text-warning"></i>Bangalore, Dubai</p>
+        <p><i class="fas fa-phone me-2 text-warning"></i><a href="tel:+917094858696">+91 70948 58696</a></p>
+        <p><i class="fas fa-envelope me-2 text-warning"></i><a href="mailto:puzzle@diplomats.co.in">puzzle@diplomats.co.in</a></p>
         <div class="social-icons mt-3">
           <a href="#" class="me-3 text-white"><i class="fab fa-linkedin"></i></a>
           <a href="#" class="me-3 text-white"><i class="fab fa-instagram"></i></a>
@@ -178,11 +182,11 @@
       <div class="col-md-3">
         <h5 class="fw-bold mb-3">Quick Links</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="footer-link">Home</a></li>
-          <li><a href="#" class="footer-link">About</a></li>
-          <li><a href="#" class="footer-link">Services</a></li>
-          <li><a href="#" class="footer-link">Our Projects</a></li>
-          <li><a href="#" class="footer-link">Contact Us</a></li>
+          <li><a href="index.html" class="footer-link">Home</a></li>
+          <li><a href="about.html" class="footer-link">About</a></li>
+          <li><a href="service.html" class="footer-link">Services</a></li>
+          <li><a href="ourproject.html" class="footer-link">Our Projects</a></li>
+          <li><a href="contact.html" class="footer-link">Contact Us</a></li>
         </ul>
       </div>
 
@@ -198,10 +202,10 @@
       <div class="col-md-3" style="    text-align: right;">
         <h5 class="fw-bold mb-3">Services</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="footer-link">Residential</a></li>
-          <li><a href="#" class="footer-link">Industrial</a></li>
-          <li><a href="#" class="footer-link">Commercial</a></li>
-          <li><a href="#" class="footer-link">How It Works</a></li>
+          <li><a href="service.html" class="footer-link">Residential</a></li>
+          <li><a href="service.html" class="footer-link">Industrial</a></li>
+          <li><a href="service.html" class="footer-link">Commercial</a></li>
+          <li><a href="howitwork.html" class="footer-link">How It Works</a></li>
         </ul>
       </div>
 
