--- a/service.html
+++ b/service.html
@@ -26,6 +26,10 @@
 
 </head>
 <body>
+<!-- Preloader -->
+<div id="preloader">
+  <div class="spinner"></div>
+</div>
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg sticky-top bg-white shadow-sm">
@@ -39,13 +43,14 @@
         <button class="btn dropdown-toggle" type="button" id="locationDropdown" data-bs-toggle="dropdown">
           Bangalore
         </button>
-        <ul class="dropdown-menu" aria-labelledby="locationDropdown">
-          <li><a class="dropdown-item" href="#">Chennai</a></li>
-          <li><a class="dropdown-item" href="#">Coimbatore</a></li>
-          <li><a class="dropdown-item" href="#">Madurai</a></li>
-          <li><a class="dropdown-item" href="#">Trichy</a></li>
-          <li><a class="dropdown-item" href="#">Salem</a></li>
-        </ul>
+<ul class="dropdown-menu" aria-labelledby="locationDropdown">
+  <li><a class="dropdown-item location-option" href="#" data-location="Chennai">Chennai</a></li>
+  <li><a class="dropdown-item location-option" href="#" data-location="Coimbatore">Coimbatore</a></li>
+  <li><a class="dropdown-item location-option" href="#" data-location="Madurai">Madurai</a></li>
+  <li><a class="dropdown-item location-option" href="#" data-location="Trichy">Trichy</a></li>
+  <li><a class="dropdown-item location-option" href="#" data-location="Salem">Salem</a></li>
+</ul>
+
       </div>
     </div>
 
@@ -65,6 +70,8 @@
     </div>
   </div>
 </nav>
+
+
 <!-- Service Banner -->
 <div class="service-banner mb-5">
   <div class="content">
@@ -73,7 +80,7 @@
   </div>
 </div>
 
-<section class="project-type-section py-5">
+<section class="project-type-section bg-light py-5">
   <div class="container">
         <!-- Section Title -->
             <div class="text-center mb-5">
@@ -90,9 +97,9 @@
         <h3 class="fw-bold">Residential Construction</h3>
         <p>We bring your dream home to life—from elegant villas to modern apartments. Our residential projects focus on comfort, sustainability, and timeless design tailored to your lifestyle.</p>
         <ul class="list-unstyled">
-          <li>✔ Villas & Bungalows</li>
-          <li>✔ Independent Homes</li>
-          <li>✔ Residential Apartments</li>
+          <li> Villas & Bungalows</li>
+          <li> Independent Homes</li>
+          <li> Residential Apartments</li>
         </ul>
       </div>
     </div>
@@ -106,9 +113,9 @@
         <h3 class="fw-bold">Commercial Construction</h3>
         <p>We design and deliver commercial spaces that drive business success—retail outlets, office complexes, and mixed-use buildings with smart planning and execution.</p>
         <ul class="list-unstyled">
-          <li>✔ Office Complexes</li>
-          <li>✔ Showrooms & Retail Spaces</li>
-          <li>✔ Co-working & Mixed-use Buildings</li>
+          <li>Office Complexes</li>
+          <li>Showrooms & Retail Spaces</li>
+          <li>Co-working & Mixed-use Buildings</li>
         </ul>
       </div>
     </div>
@@ -122,9 +129,9 @@
         <h3 class="fw-bold">Industrial Construction</h3>
         <p>Our industrial solutions focus on efficiency and durability. From warehouses to factories, we meet rigorous industry standards for safety, space, and scalability.</p>
         <ul class="list-unstyled">
-          <li>✔ Warehouses & Storage Facilities</li>
-          <li>✔ Manufacturing Plants</li>
-          <li>✔ Logistics & Distribution Hubs</li>
+          <li>Warehouses & Storage Facilities</li>
+          <li>Manufacturing Plants</li>
+          <li>Logistics & Distribution Hubs</li>
         </ul>
       </div>
     </div>
@@ -132,10 +139,6 @@
   </div>
 </section>
 
-<!-- Bootstrap 5 & Font Awesome CDN -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 <div class="container my-5">
   <!-- Tabs -->
@@ -242,7 +245,6 @@
 
 
 
-
 <!-- Footer Section -->
 <footer class="footer-section text-white py-5">
   <div class="container">
@@ -251,9 +253,9 @@
       
       <!-- Column 1: Location -->
       <div class="col-md-3">
-        <p><i class="fas fa-map-marker-alt me-2 text-warning"></i><strong>EXPERIENCE CENTRE</strong><br>Jayanagar, Bengaluru</p>
-        <p><i class="fas fa-phone me-2 text-warning"></i>+91 98765 43210</p>
-        <p><i class="fas fa-envelope me-2 text-warning"></i>info@construction.com</p>
+        <p><i class="fas fa-map-marker-alt me-2 text-warning"></i>Bangalore, Dubai</p>
+        <p><i class="fas fa-phone me-2 text-warning"></i><a href="tel:+917094858696">+91 70948 58696</a></p>
+        <p><i class="fas fa-envelope me-2 text-warning"></i><a href="mailto:puzzle@diplomats.co.in">puzzle@diplomats.co.in</a></p>
         <div class="social-icons mt-3">
           <a href="#" class="me-3 text-white"><i class="fab fa-linkedin"></i></a>
           <a href="#" class="me-3 text-white"><i class="fab fa-instagram"></i></a>
@@ -266,11 +268,11 @@
       <div class="col-md-3">
         <h5 class="fw-bold mb-3">Quick Links</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="footer-link">Home</a></li>
-          <li><a href="#" class="footer-link">About</a></li>
-          <li><a href="#" class="footer-link">Services</a></li>
-          <li><a href="#" class="footer-link">Our Projects</a></li>
-          <li><a href="#" class="footer-link">Contact Us</a></li>
+          <li><a href="index.html" class="footer-link">Home</a></li>
+          <li><a href="about.html" class="footer-link">About</a></li>
+          <li><a href="service.html" class="footer-link">Services</a></li>
+          <li><a href="ourproject.html" class="footer-link">Our Projects</a></li>
+          <li><a href="contact.html" class="footer-link">Contact Us</a></li>
         </ul>
       </div>
 
@@ -286,10 +288,10 @@
       <div class="col-md-3" style="    text-align: right;">
         <h5 class="fw-bold mb-3">Services</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="footer-link">Residential</a></li>
-          <li><a href="#" class="footer-link">Industrial</a></li>
-          <li><a href="#" class="footer-link">Commercial</a></li>
-          <li><a href="#" class="footer-link">How It Works</a></li>
+          <li><a href="service.html" class="footer-link">Residential</a></li>
+          <li><a href="service.html" class="footer-link">Industrial</a></li>
+          <li><a href="service.html" class="footer-link">Commercial</a></li>
+          <li><a href="howitwork.html" class="footer-link">How It Works</a></li>
         </ul>
       </div>
 
@@ -304,7 +306,6 @@
     </div>
   </div>
 </footer>
-
 
 
   <!-- JS Scripts -->
