--- a/contact.html
+++ b/contact.html
@@ -212,7 +212,7 @@
       </div>
 
       <!-- Column 4: Services -->
-      <div class="col-md-3" style="    text-align: right;">
+      <div class="col-md-3"  id="foo">
         <h5 class="fw-bold mb-3">Services</h5>
         <ul class="list-unstyled">
           <li><a href="service.html" class="footer-link">Residential</a></li>
