--- a/service.html
+++ b/service.html
@@ -145,7 +145,7 @@
 <div class="d-flex justify-content-between align-items-center mb-3 flex-wrap">
   <div>
     <h3 class="section-title text-start mb-1">Our Projects</h3>
-    <p class="section-subtitle">We have completed more than 200 highly prestigious projects in the field of construction.</p>
+    <p class="section-subtitle" id="ka">We have completed more than 200 highly prestigious projects in the field of construction.</p>
   </div>
   <div class="mt-3 mt-md-0">
   <!-- Tabs -->
@@ -285,7 +285,7 @@
       </div>
 
       <!-- Column 4: Services -->
-      <div class="col-md-3" style="    text-align: right;">
+      <div class="col-md-3"  id="foo">
         <h5 class="fw-bold mb-3">Services</h5>
         <ul class="list-unstyled">
           <li><a href="service.html" class="footer-link">Residential</a></li>
