--- a/about.html
+++ b/about.html
@@ -90,6 +90,7 @@
   </section>
 <section class="about-sec pb-5 bg-light-subtle" id="about">
   <div class="container">
+    
     <div class="row align-items-center">
       <!-- Text Section -->
       <div class="col-md-7">
@@ -147,36 +148,43 @@
     <img src="https://t4.ftcdn.net/jpg/06/35/52/21/360_F_635522132_w9sXALo7T1ruFNqPBGPfWmVXYFQipnDP.jpg" alt="Team at Work">
   </div>
 </section>
-
-<section class="mission-vision-section">
-
-  <!-- MISSION: Dot on right -->
-  <div class="content-block">
-    <h2>MISSION</h2>
-    <div class="divider-right">
-      <div class="dot"></div>
-      <div class="line"></div>
-    </div>
-    <p>
-      To deliver safe, sustainable, and innovative construction solutions that exceed client expectations,
-      while maintaining uncompromising quality, integrity, and professionalism in every project we undertake.
-    </p>
+<section class="mission-vision-section bg-light-subtle">
+  <div class="container">
+  <!-- Section Title -->
+  <div class="text-center mb-5">
+    <span class="text-uppercase text-warning fw-bold d-block mb-2">About Us</span>
+    <h2 class="section-title">Our Mission & Vision</h2>
   </div>
-
-  <!-- VISION: Dot on left -->
-  <div class="content-block">
-    <h2>VISION</h2>
-    <div class="divider-left">
-      <div class="dot"></div>
-      <div class="line"></div>
+  <div class="row">
+ <div class="col-md-1"></div>
+    <!-- MISSION -->
+    <div class="col-md-4 mb-4">
+      <div class="content-block">
+        <h2>MISSION</h2>
+        <p>
+          To deliver safe, sustainable, and innovative construction solutions that exceed client expectations,
+          while maintaining uncompromising quality, integrity, and professionalism in every project undertake.
+        </p>
+      </div>
     </div>
-    <p>
-      To be the most trusted and forward-thinking construction partner in the industry—leading the way in
-      commercial, industrial, and residential development through cutting-edge practices and client-focused delivery.
-    </p>
+    <div class="col-md-1"></div>
+    <div class="col-md-1"></div>
+    <!-- VISION -->
+    <div class="col-md-4 mb-4">
+      <div class="content-block">
+        <h2>VISION</h2>
+        <p>
+          To be the most trusted and forward-thinking construction partner in the industry—leading the way in
+          commercial, industrial, and residential development through cutting-edge practices and client-focused delivery.
+        </p>
+      </div>
+    </div>
+        <div class="col-md-1"></div>
+  </div>
   </div>
 
 </section>
+
 
 <section class="trusted-partner">
   <div class="container">
@@ -190,7 +198,7 @@
       <div class="row">
         <div class="col-md-3 col-12 feature-box">
           <div class="feature-icon"><i class="bi bi-shield-check"></i></div>
-          <h6>Uncompromised Safety Standards</h6>
+          <h6>Uncompromised Safety</h6>
         </div>
         <div class="col-md-3 col-12 feature-box">
           <div class="feature-icon"><i class="bi bi-building"></i></div>
