--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,8 @@
   <!-- Owl Carousel CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
-
+<!-- AOS CSS -->
+<link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <!-- Animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="css/style.css">
@@ -27,43 +28,52 @@
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg sticky-top bg-white shadow-sm">
-  <div class="container d-flex align-items-center justify-content-between">
-    <div class="d-flex align-items-center">
-      <a class="navbar-brand fw-bold d-flex align-items-center text-dark me-3" href="index.html">
-        <img src="images/logo.png" alt="Logo" height="40" class="me-2">
-      </a>
+  <div class="container">
+    <div class="row w-100 align-items-center flex-nowrap">
+      
+      <!-- Left: Logo + Location -->
+      <div class="col d-flex align-items-center">
+        <a class="navbar-brand fw-bold d-flex align-items-center text-dark me-3" href="index.html">
+          <img src="images/logo.png" alt="Logo" height="40" class="me-2">
+        </a>
 
-      <div class="dropdown">
-        <button class="btn dropdown-toggle" type="button" id="locationDropdown" data-bs-toggle="dropdown">
-          Bangalore
-        </button>
-<ul class="dropdown-menu" aria-labelledby="locationDropdown">
-  <li><a class="dropdown-item location-option" href="#" data-location="Chennai">Chennai</a></li>
-  <li><a class="dropdown-item location-option" href="#" data-location="Coimbatore">Coimbatore</a></li>
-  <li><a class="dropdown-item location-option" href="#" data-location="Madurai">Madurai</a></li>
-  <li><a class="dropdown-item location-option" href="#" data-location="Trichy">Trichy</a></li>
-  <li><a class="dropdown-item location-option" href="#" data-location="Salem">Salem</a></li>
-</ul>
-
+        <!-- Location Dropdown -->
+        <div class="dropdown">
+          <button class="btn dropdown-toggle" type="button" id="locationDropdown" data-bs-toggle="dropdown">
+            Location
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="locationDropdown">
+            <li><a class="dropdown-item location-option" href="#" data-location="Bangalore">Bangalore</a></li>
+            <li><a class="dropdown-item location-option" href="#" data-location="Chennai">Chennai</a></li>
+            <li><a class="dropdown-item location-option" href="#" data-location="Coimbatore">Coimbatore</a></li>
+            <li><a class="dropdown-item location-option" href="#" data-location="Madurai">Madurai</a></li>
+            <li><a class="dropdown-item location-option" href="#" data-location="Trichy">Trichy</a></li>
+            <li><a class="dropdown-item location-option" href="#" data-location="Salem">Salem</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+      <!-- Center: Menu -->
+      <div class="col-auto d-none d-lg-block">
+        <ul class="navbar-nav mx-auto flex-row gap-3">
+          <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="howitwork.html">How it Works</a></li>
+          <li class="nav-item"><a class="nav-link" href="ourproject.html">Our Projects</a></li>
+        </ul>
+      </div>
 
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-        <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="howitwork.html">How it Works</a></li>
-        <li class="nav-item"><a class="nav-link" href="ourproject.html">Our Projects</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
-      </ul>
+<div class="col d-flex justify-content-end align-items-center gap-3" >
+  <a href="contact.html" class="btn btn-sm btn-primary px-3" style="background-color: #001489 !important; font-size: 18px;">
+    Get Build Quote
+  </a>
+</div>
+
     </div>
   </div>
 </nav>
+
 
 <!-- Contact Page Banner -->
 <section class="contact-banner" role="region" aria-label="Contact Banner">
@@ -77,26 +87,27 @@
 <div class="contact-us">
   <div class="container">
     <div class="row cntc-bg2">
-      <div class="col-lg-7">
+      <!-- Contact Form -->
+      <div class="col-lg-7" data-aos="fade-right">
         <h4 class="contact-form-title">Write Us Something</h4>
         <form id="contact_form" action="https://formspree.io/f/myyleorq" method="POST">
           <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <div class="form-box">
                 <input type="text" name="name" placeholder="Name:" required>
               </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="150">
               <div class="form-box">
                 <input type="email" name="email" placeholder="Email:" required>
               </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
               <div class="form-box">
                 <input type="tel" name="phone" placeholder="Mobile No:">
               </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="250">
               <div class="form-box">
                 <select id="service" name="service">
                   <option value="">Select Service*</option>
@@ -107,13 +118,12 @@
                 </select>
               </div>
             </div>
-
-            <div class="col-lg-12">
+            <div class="col-lg-12" data-aos="fade-up" data-aos-delay="300">
               <div class="form-box">
                 <textarea name="message" placeholder="Your Message"></textarea>
               </div>
             </div>
-            <div class="contact-form">
+            <div class="contact-form" data-aos="fade-up" data-aos-delay="350">
               <button type="submit">Submit <i class="fa-solid fa-arrow-right"></i></button>
             </div>
           </div>
@@ -121,37 +131,37 @@
       </div>
 
       <!-- Contact Info -->
-      <div class="col-lg-5">
+      <div class="col-lg-5" data-aos="fade-left">
         <div class="single-contact-info-box">
           <h3 class="cntc-info-title">Contact Info</h3>
-          <div class="contact-information2">
+          <div class="contact-information2" data-aos="fade-left" data-aos-delay="100">
             <div class="contacts-icon">
               <i class="fa-solid fa-envelope"></i>
             </div>
             <div class="contacts-title">
               <h5>Send E-Mail</h5>
-              <h6>youremail@gmail.com</h6>
+              <h6><a href="mailto:puzzle@diplomats.co.in">puzzle@diplomats.co.in</a></h6>
             </div>
           </div>
-          <div class="contact-information2">
+          <div class="contact-information2" data-aos="fade-left" data-aos-delay="150">
             <div class="contacts-icon">
               <i class="fa-solid fa-phone"></i>
             </div>
             <div class="contacts-title">
               <h5>Call Anytime</h5>
-              <h6>+98 876 (9808) 020</h6>
+              <h6><a href="tel:+917094858696">+91 70948 58696</a></h6>
             </div>
           </div>
-          <div class="contact-information2 upper2">
+          <div class="contact-information2 upper2" data-aos="fade-left" data-aos-delay="200">
             <div class="contacts-icon">
               <i class="fa-solid fa-location-dot"></i>
             </div>
             <div class="contacts-title">
               <h5>Locations</h5>
-              <h6>102/B New Elephant Rd, Hatirjheel<br>Dhaka - 1212</h6>
+              <h6>Bangalore, Dubai</h6>
             </div>
           </div>
-          <div class="follow-company-icon2 mt-3">
+          <div class="follow-company-icon2 mt-3" data-aos="fade-left" data-aos-delay="250">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -162,6 +172,8 @@
     </div>
   </div>
 </div>
+
+<!-- Map Section -->
 <iframe 
   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.300076365942!2d77.594562!3d12.971598!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1670c8d6a4d7%3A0x8fb9c2c601ed31d8!2sBangalore%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1691566660000!5m2!1sen!2sin" 
   width="100%" 
@@ -169,17 +181,18 @@
   style="border:0;" 
   allowfullscreen="" 
   loading="lazy" 
-  referrerpolicy="no-referrer-when-downgrade">
+  referrerpolicy="no-referrer-when-downgrade"
+  data-aos="fade-up"
+  data-aos-delay="300">
 </iframe>
 
 <!-- Footer Section -->
-<footer class="footer-section text-white py-5">
+<footer class="footer-section text-white py-5" data-aos="fade-up">
   <div class="container">
-    <!-- Add gx-4 here for equal column spacing -->
-<div class="row gx-5 gy-4 align-items-start text-center text-md-start">
+    <div class="row gx-5 gy-4 align-items-start text-center text-md-start">
       
       <!-- Column 1: Location -->
-      <div class="col-md-3">
+      <div class="col-md-3" data-aos="fade-up" data-aos-delay="100">
         <p><i class="fas fa-map-marker-alt me-2 text-warning"></i>Bangalore, Dubai</p>
         <p><i class="fas fa-phone me-2 text-warning"></i><a href="tel:+917094858696">+91 70948 58696</a></p>
         <p><i class="fas fa-envelope me-2 text-warning"></i><a href="mailto:puzzle@diplomats.co.in">puzzle@diplomats.co.in</a></p>
@@ -192,7 +205,7 @@
       </div>
 
       <!-- Column 2: Quick Links -->
-      <div class="col-md-3">
+      <div class="col-md-3" data-aos="fade-up" data-aos-delay="200">
         <h5 class="fw-bold mb-3">Quick Links</h5>
         <ul class="list-unstyled">
           <li><a href="index.html" class="footer-link">Home</a></li>
@@ -204,15 +217,15 @@
       </div>
 
       <!-- Column 3: About and Logo -->
-      <div class="col-md-3 text-md-center">
-        <img src="images/logo.png" alt=" Logo" class="mb-3" style="width: 130px;">
+      <div class="col-md-3 text-md-center" data-aos="fade-up" data-aos-delay="300">
+        <img src="images/logo.png" alt="Logo" class="mb-3" style="width: 130px;">
         <p>
           construction® is a one-stop solution for all your home construction needs, providing turnkey, end-to-end services tailored to your lifestyle and vision.
         </p>
       </div>
 
       <!-- Column 4: Services -->
-      <div class="col-md-3"  id="foo">
+      <div class="col-md-3" id="foo" data-aos="fade-up" data-aos-delay="400">
         <h5 class="fw-bold mb-3">Services</h5>
         <ul class="list-unstyled">
           <li><a href="service.html" class="footer-link">Residential</a></li>
@@ -225,14 +238,15 @@
     </div>
 
     <!-- Divider -->
-    <hr class="border-light mt-4">
+    <hr class="border-light mt-4" data-aos="zoom-in" data-aos-delay="450">
 
     <!-- Copyright -->
-    <div class="text-center pt-2">
+    <div class="text-center pt-2" data-aos="fade-in" data-aos-delay="500">
       <p class="mb-0">&copy; 2025 construction®. All rights reserved.</p>
     </div>
   </div>
 </footer>
+
 
 
 
@@ -246,7 +260,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 
   <script src="js/script.js"></script>
-
+<!-- AOS JS -->
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 
 </body>
 </html>
