--- a/howitwork.html
+++ b/howitwork.html
@@ -31,43 +31,52 @@
 </div>
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg sticky-top bg-white shadow-sm">
-  <div class="container d-flex align-items-center justify-content-between">
-    <div class="d-flex align-items-center">
-      <a class="navbar-brand fw-bold d-flex align-items-center text-dark me-3" href="index.html">
-        <img src="images/logo.png" alt="Logo" height="40" class="me-2">
-      </a>
+  <div class="container">
+    <div class="row w-100 align-items-center flex-nowrap">
+      
+      <!-- Left: Logo + Location -->
+      <div class="col d-flex align-items-center">
+        <a class="navbar-brand fw-bold d-flex align-items-center text-dark me-3" href="index.html">
+          <img src="images/logo.png" alt="Logo" height="40" class="me-2">
+        </a>
 
-      <div class="dropdown">
-        <button class="btn dropdown-toggle" type="button" id="locationDropdown" data-bs-toggle="dropdown">
-          Bangalore
-        </button>
-<ul class="dropdown-menu" aria-labelledby="locationDropdown">
-  <li><a class="dropdown-item location-option" href="#" data-location="Chennai">Chennai</a></li>
-  <li><a class="dropdown-item location-option" href="#" data-location="Coimbatore">Coimbatore</a></li>
-  <li><a class="dropdown-item location-option" href="#" data-location="Madurai">Madurai</a></li>
-  <li><a class="dropdown-item location-option" href="#" data-location="Trichy">Trichy</a></li>
-  <li><a class="dropdown-item location-option" href="#" data-location="Salem">Salem</a></li>
-</ul>
-
+        <!-- Location Dropdown -->
+        <div class="dropdown">
+          <button class="btn dropdown-toggle" type="button" id="locationDropdown" data-bs-toggle="dropdown">
+            Location
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="locationDropdown">
+            <li><a class="dropdown-item location-option" href="#" data-location="Bangalore">Bangalore</a></li>
+            <li><a class="dropdown-item location-option" href="#" data-location="Chennai">Chennai</a></li>
+            <li><a class="dropdown-item location-option" href="#" data-location="Coimbatore">Coimbatore</a></li>
+            <li><a class="dropdown-item location-option" href="#" data-location="Madurai">Madurai</a></li>
+            <li><a class="dropdown-item location-option" href="#" data-location="Trichy">Trichy</a></li>
+            <li><a class="dropdown-item location-option" href="#" data-location="Salem">Salem</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+      <!-- Center: Menu -->
+      <div class="col-auto d-none d-lg-block">
+        <ul class="navbar-nav mx-auto flex-row gap-3">
+          <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="howitwork.html">How it Works</a></li>
+          <li class="nav-item"><a class="nav-link" href="ourproject.html">Our Projects</a></li>
+        </ul>
+      </div>
 
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-        <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="howitwork.html">How it Works</a></li>
-        <li class="nav-item"><a class="nav-link" href="ourproject.html">Our Projects</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
-      </ul>
+<div class="col d-flex justify-content-end align-items-center gap-3" >
+  <a href="contact.html" class="btn btn-sm btn-primary px-3" style="background-color: #001489 !important; font-size: 18px;">
+    Get Build Quote
+  </a>
+</div>
+
     </div>
   </div>
 </nav>
+
 
 
 
@@ -276,33 +285,31 @@
 
 </section>
 
-
 <!-- contact -->
   <section class="contact-section">
     <!-- Left: Image -->
-    <div class="contact-img">
-      <img src="https://img.freepik.com/free-photo/customer-service-handsome-guy-with-headset-laptop-suit-typing-computer_140725-164761.jpg?uid=R189150807&ga=GA1.1.29269001.1752921385&semt=ais_hybrid&w=740&q=80" alt="Contact Expert" />
+    <div class="contact-img"  data-aos="fade-down-right">
+      <img src="image/contact.avif" alt="Contact Expert" />
       <!-- Replace with your image or use uploaded one -->
     </div>
 
     <!-- Right: Text and Buttons -->
-    <div class="contact-text">
+    <div class="contact-text" data-aos="fade-down-left">
       <h2>Contact With Our Expert</h2>
       <p>Book your appointment to talk to our experts who will assist you with all your doubts regarding our services.</p>
       <div class="contact-buttons">
-        <a href="#" class="btn-contact"><i class="fas fa-phone"></i> Contact</a>
+        <a href="contact.html" class="btn-contact"><i class="fas fa-phone"></i> Contact</a>
       </div>
     </div>
   </section>
 
 <!-- Footer Section -->
-<footer class="footer-section text-white py-5">
+<footer class="footer-section text-white py-5" data-aos="fade-up">
   <div class="container">
-    <!-- Add gx-4 here for equal column spacing -->
-<div class="row gx-5 gy-4 align-items-start text-center text-md-start">
+    <div class="row gx-5 gy-4 align-items-start text-center text-md-start">
       
       <!-- Column 1: Location -->
-      <div class="col-md-3">
+      <div class="col-md-3" data-aos="fade-up" data-aos-delay="100">
         <p><i class="fas fa-map-marker-alt me-2 text-warning"></i>Bangalore, Dubai</p>
         <p><i class="fas fa-phone me-2 text-warning"></i><a href="tel:+917094858696">+91 70948 58696</a></p>
         <p><i class="fas fa-envelope me-2 text-warning"></i><a href="mailto:puzzle@diplomats.co.in">puzzle@diplomats.co.in</a></p>
@@ -315,7 +322,7 @@
       </div>
 
       <!-- Column 2: Quick Links -->
-      <div class="col-md-3">
+      <div class="col-md-3" data-aos="fade-up" data-aos-delay="200">
         <h5 class="fw-bold mb-3">Quick Links</h5>
         <ul class="list-unstyled">
           <li><a href="index.html" class="footer-link">Home</a></li>
@@ -327,15 +334,15 @@
       </div>
 
       <!-- Column 3: About and Logo -->
-      <div class="col-md-3 text-md-center">
-        <img src="images/logo.png" alt=" Logo" class="mb-3" style="width: 130px;">
+      <div class="col-md-3 text-md-center" data-aos="fade-up" data-aos-delay="300">
+        <img src="images/logo.png" alt="Logo" class="mb-3" style="width: 130px;">
         <p>
           construction® is a one-stop solution for all your home construction needs, providing turnkey, end-to-end services tailored to your lifestyle and vision.
         </p>
       </div>
 
       <!-- Column 4: Services -->
-      <div class="col-md-3"  id="foo">
+      <div class="col-md-3" id="foo" data-aos="fade-up" data-aos-delay="400">
         <h5 class="fw-bold mb-3">Services</h5>
         <ul class="list-unstyled">
           <li><a href="service.html" class="footer-link">Residential</a></li>
@@ -348,14 +355,15 @@
     </div>
 
     <!-- Divider -->
-    <hr class="border-light mt-4">
+    <hr class="border-light mt-4" data-aos="zoom-in" data-aos-delay="450">
 
     <!-- Copyright -->
-    <div class="text-center pt-2">
+    <div class="text-center pt-2" data-aos="fade-in" data-aos-delay="500">
       <p class="mb-0">&copy; 2025 construction®. All rights reserved.</p>
     </div>
   </div>
 </footer>
+
 
 
 
